<resources>
    <string name="app_name">Waddle</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="forgot_password_msg_label">Enter your account email to receive\na link allowing you to reset your\npassword.</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="text_2020">2020</string>
    <string name="complete">Complete</string>
    <string name="start_trip">Start Trip</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_sign_in">Forgot password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_default_stop">Select Default Stop</string>
    <string name="address">Address</string>
    <string name="no_schedule_found">No Schedule Found!</string>
    <string name="by_creating_terms_conditions">By creating an account you agree to our\nTerms &amp; Conditions and Privacy Policy.</string>
    <string name="agree">Agree</string>
    <string name="options">Options</string>
    <string name="take_picture">Take Picture</string>
    <string name="select_picture">Select Picture</string>
    <string name="dialog_action_ok">OK</string>
    <string name="error">Error</string>
    <string name="email_empty_error_msg">Email can\'t be left blank.</string>
    <string name="enter_name">Please enter your full name.</string>
    <string name="enter_email">Please enter your email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="enter_password">Please enter your password.</string>
    <string name="enter_a_password">Please enter a password.</string>
    <string name="please_confirm_password">Please confirm password.</string>
    <string name="confirm_password_validation">Passwords do not match, please re-enter.</string>
    <string name="phone_empty_validation">Please enter your phone number.</string>
    <string name="phone_length_validation">Please provide a valid Phone Number.</string>
    <string name="address_empty_validation">Please enter your address.</string>
    <string name="default_default_validation">Please select a default stop.</string>
    <string name="otp_empty_validation">Please enter your otp.</string>
    <string name="otp_length_validation">Please provide a valid Otp.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="server_not_rechable">Server not reachable &#8230;</string>
    <string name="server_not_available">Server not available &#8230;</string>
    <string name="page_not_available">Page not found &#8230;</string>
    <string name="error_internet_connection">Error checking internet connection &#8230;</string>
    <string name="try_again">Try Again</string>
    <string name="try_again_after">Please try again in a moment.</string>
    <string name="server_not_connected_try_again_after">Server not connected, Please try again in a moment.</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="google_maps_key">AIzaSyBLSy1njD-xFsNFwFQ8AgyEQIIxIOgo2U8</string>
    <string name="confirm_stop">Confirm Stop</string>
    <string name="forgot_passport_title">Forgot Password</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="term_condition_title">Terms &amp; Conditions</string>
    <string name="lets_get_started_nadd_students">Let\'s Get Started.\n Please add a Student.</string>
    <string name="add_user_image_description">Add User</string>
    <string name="skip">Skip</string>
    <string name="add_student_title">Student Details</string>
    <string name="student_name_title">Student Name</string>
    <string name="andy_wam_dummy_name">Andy Wam</string>
    <string name="andy_wam_dummy_email">andy_125@gmail.com</string>
    <string name="andy_wam_dummy_phone">(678) 234–3452</string>
    <string name="parent_name_title">Parent Name</string>
    <string name="email_title">Email</string>
    <string name="school_name_title">School Name</string>
    <string name="student_grade_title">Student Grade</string>
    <string name="school_name_dummy">DPS SchoolAtlanta, Ga</string>
    <string name="address_dummy">DPS School Atlanta,Ga</string>
    <string name="grade_dummy">2nd</string>
    <string name="save">Save</string>
    <string name="student_name_validation_msg">Please enter student\'s name.</string>
    <string name="parent_name_validation_msg">Please enter student\'s parent name</string>
    <string name="email_validation_msg">Please enter student\'s email.</string>
    <string name="school_name_validation_msg">Please enter the name of your student\'s school.</string>
    <string name="student_grade_validation_msg">Please enter your student\'s grade.</string>
    <string name="add_member_to_group">Add Member to Group</string>
    <string name="done">Done</string>
    <string name="you_are_all_set">You are all set!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="supervisor">Supervisor</string>
    <string name="supervise">Supervise</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_students">Add Students</string>
    <string name="search_default_msg">Search</string>
    <string name="cancels">cancel</string>
    <string name="cancelTitle">Cancel</string>
    <string name="parent_details_title">Parent Details</string>
    <string name="delete">Delete</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_home2">HomeActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="notification_message_demo">Jon Accept is arriving at your stop in 5 minutes.</string>
    <string name="just_now">Just Now</string>
    <string name="yesterday">Yesterday</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="trips">Trips</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tips">Tips</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="group">Groups</string>
    <string name="message">Messages</string>
    <string name="schedule">Schedule</string>
    <string name="student">Students</string>
    <string name="waddle">Waddle</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="delete_schedule">Delete Schedule</string>
    <string name="logout_msg">Are you sure you want to logout ?</string>
    <string name="trip_end_msg">Are you sure you want to complete the trip ?</string>
    <string name="delete_msg">Are you sure you want to delete your schedule? </string>
    <string name="cancel_msg">Are you sure you want to cancel your schedule? </string>
    <string name="cancel_msg_for_search_group">Are you sure want to cancel ?</string>
    <string name="default_stop">Default Stop</string>
    <string name="date">Date</string>
    <string-array name="repeat_array">
        <item>Never</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="history">History</string>
    <string name="no_history_found">No history found!</string>
    <string name="no_upcoming_trips_found">No upcoming trips found!</string>
    <string name="this_group_trips">This group\'s Trips</string>
    <string name="view_schedule">View</string>
    <string name="leaveGroup">Leave Group</string>
    <string name="gps_permission_allow_us_message">GPS permission allows us to access location data. Please allow in App
        Settings for additional functionality.
    </string>
    <string name="weekend_date_s_are_not_allowed">Weekend dates are not allowed.</string>
    <string name="no_group_found">No group found!</string>
    <string name="no_student_found">No student found!</string>
    <string name="no_data_found">No data found!</string>
    <string name="withdraw_supervise">Withdraw Supervise</string>
    <string name="group_name">Group Name</string>
    <string name="view_details">View Details</string>
    <string name="are_you_sure_want_delete_stundent_details">Are you sure you want to delete the student details ?</string>
    <string name="are_you_sure_want_leave_this_group">Are you sure you want to exit the group? </string>
    <string name="are_you_sure_want_withdraw_supervisor">Are you sure you want to withdraw as supervisor?</string>
    <string name="are_you_sure_stop_you_would_like_select">Are you sure this is the stop you would like to select?</string>
    <string name="upcoming_dates">"Upcoming date: "</string>
    <string name="write_a_message">Write a message</string>
    <string name="group_three_dots">Group &#8230;</string>
    <string name="please_enter_your_message">Please enter your message.</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="i_didn_t_getting_the_otp">I didn\'t getting the OTP</string>
    <string name="resend_otp"><u>RESEND OTP</u></string>
    <string name="scheduled_trips">Confirmation</string>
    <string name="supervising">Supervising</string>
    <string name="ok">OKAY</string>
    <string name="your_kids_has_taken">"Your kids has taken "</string>
    <string name="trips_this_week">"trips this week"</string>
    <string name="hi">"Hi,"</string>
    <string name="please_back_again">Please back again</string>
</resources>