<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/ic_groups"
        android:title="@string/group" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/schedule" />

    <item
        android:id="@+id/navigation_students"
        android:icon="@drawable/ic_students"
        android:title="@string/student"/>
    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message"
        android:title="@string/message" />

</menu>
