<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/_20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/layoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom_border"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                style="@style/inputText"
                android:background="@null"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="@dimen/_10dp"
                android:hint="@string/full_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:background="@drawable/edit_text_bottom_border"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/inputText"
                android:background="@null"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/_10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:background="@drawable/edit_text_bottom_border"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/inputText"
                android:background="@null"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/_10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/_5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutConPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:background="@drawable/edit_text_bottom_border"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConPassword"
                style="@style/inputText"
                android:background="@null"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/_10dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/_5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:background="@drawable/edit_text_bottom_border"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutConPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                style="@style/inputText"
                android:background="@null"
                android:maxLength="14"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/_10dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="@dimen/_5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:background="@drawable/edit_text_bottom_border"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPhone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddress"
                style="@style/inputText"
                android:background="@null"
                android:drawableStart="@drawable/ic_address"
                android:drawablePadding="@dimen/_10dp"
                android:hint="@string/address"
                android:inputType="text"
                android:padding="@dimen/_5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLayoutDefaultStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:background="@drawable/edit_text_bottom_border"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutAddress">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDefaultStop"
                style="@style/inputText"
                android:background="@null"
                android:drawableStart="@drawable/ic_default_stop"
                android:drawablePadding="@dimen/_10dp"
                android:drawableEnd="@drawable/ic_dropdown"
                android:hint="@string/select_default_stop"
                android:inputType="text"
                android:padding="@dimen/_5dp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            style="@style/button"
            android:layout_marginTop="@dimen/_40dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mLayoutDefaultStop" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAgreeTerms"
            style="@style/labelBottomText"
            android:layout_marginTop="@dimen/_10dp"
            android:paddingBottom="@dimen/_40dp"
            android:text="@string/by_creating_terms_conditions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>


