<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIcons"
    tools:context=".ui.view.activity.onboarding.OnBoardingActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewAddStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_120dp"
        android:contentDescription="@string/add_user_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add_user" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewMsg"
        style="@style/labelText"
        android:layout_marginTop="@dimen/_32dp"
        android:gravity="center"
        android:text="@string/lets_get_started_nadd_students"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAddStudent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSkip"
        style="@style/button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingStart="@dimen/_20dp"
        android:paddingEnd="@dimen/_20dp"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/colorSkip"
        app:backgroundTint="@color/colorWhite"
        app:cornerRadius="@dimen/_25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMsg"
        app:layout_constraintVertical_bias="0.889"
        app:strokeColor="@color/colorSkip"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>