<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/_20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_20dp"
        tools:context=".LoginActivity">

        <LinearLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom_border"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/inputText"
                android:background="@null"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/_10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:background="@drawable/edit_text_bottom_border"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/inputText"
                android:background="@null"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/_10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/_5dp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            style="@style/button"
            android:layout_marginTop="@dimen/_40dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutPassword" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvForget"
            style="@style/labelBottomText"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/forgot_password_sign_in"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>