<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_280dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5dp"
    android:background="@drawable/white_background"
    android:padding="@dimen/_10dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewCross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toEndOf="@id/textViewTitleRepeat"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewTitleRepeat"
        style="@style/labelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:paddingTop="@dimen/_10dp"
        android:paddingBottom="@dimen/_5dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginBottom="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitleRepeat">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:paddingStart="@dimen/_10dp"
            android:paddingTop="@dimen/_5dp"
            android:paddingEnd="@dimen/_10dp"
            android:paddingBottom="@dimen/_5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTitleRepeat" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginTop="@dimen/_3dp"
        android:layout_marginBottom="@dimen/_3dp"
        android:visibility="gone"
        style="@style/labelText"
        android:text="@string/weekend_date_s_are_not_allowed"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:id="@+id/textViewDaySpecificError"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewDefaultStopTitle"
        style="@style/labelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_10dp"
        android:paddingBottom="@dimen/_5dp"
        android:text="@string/default_stop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDaySpecificError" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewDefaultStopValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:paddingStart="@dimen/_10dp"
        android:paddingTop="@dimen/_10dp"
        android:paddingBottom="@dimen/_10dp"
        android:paddingEnd="@dimen/_10dp"
        android:background="@drawable/day_out_line"
        android:text="@string/about"
        android:drawablePadding="@dimen/_5dp"
        android:drawableEnd="@drawable/ic_down_arrow"
        style="@style/labelText"
        app:layout_constraintStart_toStartOf="@id/textViewDefaultStopTitle"
        app:layout_constraintTop_toBottomOf="@id/textViewDefaultStopTitle"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDone"
        style="@style/button"
        android:layout_width="@dimen/_100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:text="@string/done"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDefaultStopValue" />


</androidx.constraintlayout.widget.ConstraintLayout>